--- a/css/style.css
+++ b/css/style.css
@@ -97,13 +97,14 @@ body{
   .loader-wrapper {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #242f3f;
     display:flex;
     justify-content: center;
     align-items: center;
+    z-index: 999 !important;
   }
   .loader {
     display: inline-block;
