qonita ghifari announcement

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,13 @@ body{
     justify-content: center;
     align-items: center;
     z-index: 999 !important;
+    display: flex;
+    flex-direction: column;
+  }
+  .loader-wrapper p{
+    color: white;
+    font-size: 20px!important;
+    font-family: 'amalfi';
   }
   .loader {
     display: inline-block;
